# domus

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
apps/api/: .dockerignore  Dockerfile  app.py  package.json  pyproject.toml
apps/api/domus_agent/: agent.py
apps/web/: package.json
apps/web/app/: layout.tsx  page.tsx
apps/web/app/login/: page.tsx
apps/web/components/: message.tsx
apps/web/components/auth/: GoogleSignInButton.tsx
apps/web/components/ui/: avatar.tsx
apps/web/contexts/: AuthContext.tsx
apps/web/lib/: firebase.ts
backend/: app.py
backend/domus_agent/: agent.py
backend/domus_agent/.adk/: session.db
docs/: Domus_Project_Spec.pages
frontend/src/: App.tsx
