[project]
name = "domus-api"
version = "0.1.0"
description = "Backend for Domus"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "firebase-admin>=7.2.0",
    "google-adk>=1.27.1",
    "google-genai>=1.67.0",
    "pydantic>=2.12.5",
    "uvicorn[standard]>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "black>=24.1.0",
]
